draft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: demo-flask
          image: sonld203/sample_flask_app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1"
          volumeMounts:
            - name: database-volume
              mountPath: /data
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: database-pvc
