draft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-backend
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
