draft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app_ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: sample-backend
              port:
                number: 5000
